welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: type mismatch;
 found   : String("true")
 required: Boolean
			"true"
                        ^answerCell:7: error: type mismatch;
 found   : String("false")
 required: Boolean
			"false"
                        ^answerCell:13: error: type mismatch;
 found   : String("false")
 required: Boolean
      		"false"
                ^answerCell:16: error: type mismatch;
 found   : String("true")
 required: Boolean
      		"true"
                ^